--- a/index.css
+++ b/index.css
@@ -33,6 +33,37 @@ body {
     color:white
 }
 
+#tileSetBox {
+  background-color: white;
+  width:500px;
+  height:400px;
+  position:absolute;
+  top:250px;
+  left:250px;
+}
+
+#tileSetBox #centerDiv {
+  display: block;
+  width: 80%;
+  height: 60%;
+  overflow: auto;
+  background-color: black;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+#tileSetBox img {
+
+}
+
+#clip {
+  clip:rect(0, 50, 50, 0)
+}
+
 .toolbar {
   width:100%;
   background-color: #384b6a;
