--- a/index.css
+++ b/index.css
@@ -40,6 +40,7 @@ body {
   position:absolute;
   top:250px;
   left:250px;
+  display:none;
 }
 
 #tileSetBox #centerDiv {
@@ -77,7 +78,6 @@ body {
 #tileSelector {
   width:0;
   height:0;
-  border: 1px solid white;
   position: absolute;
   top: 0;
   left: 0;
