--- a/index.css
+++ b/index.css
@@ -201,6 +201,7 @@ body {
   padding: 0px;
   height: 160px;
   overflow-y: scroll;
+  overflow-x: hidden;
   margin-right: 10px;
   margin-top: 0px;
   margin-bottom: 10;
@@ -209,11 +210,12 @@ body {
 
 #buttonList li {
   height: 32px;
-    margin: 1px;
-    background-color: #ffffff;
-    color: #393939;
-    font: menu;
-    font-size: 16;
+  margin: 1px;
+  background-color: #ffffff;
+  color: #393939;
+  font: menu;
+  font-size: 16;
+  position: relative;
 }
 
 #buttonList li:hover{
@@ -252,16 +254,19 @@ body {
 }
 
 .colorTag {
-  width: 32px;
-  height: 32px;
   display: inline-block;
+  transform: scale(1);
+  transform-origin: top left;
+  clip: rect(0,32,32,0);
+  position: absolute;
+  z-index: 100;
 }
 
 .label {
   display: inline-block;
   vertical-align: middle;
   height: 100%;
-  margin-left: 10px;
+  margin-left: 42px;
   margin-bottom: 10px;
 }
 
